--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
               </li>
               <li>
                 <label class='radio inline'>
+                  <input type='radio' name='types' id='rbPolygon3' />
+                  Percent Students with Disabilities
+                </label>
+              </li>
+              <li>
+                <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygonOff' />
                   Off
                 </label>
