--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--MODIFY link and text to point to your own site if desired-->
-            <li class='active'><a href="http://commons.trincoll.edu/css" target="_blank">Back to Trinity Cities, Schools, and Suburbs Site</a></li>
+            <li class='active'><a href="http://commons.trincoll.edu/css" target="_blank">Back to the Cities, Schools, and Suburbs Site</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -166,7 +166,7 @@
           </noscript>
           <div id='map_canvas'></div>
           <!--MODIFY link to publicly display your Google Fusion Tables data table, source, and text-->
-          <p>View <a href='https://www.google.com/fusiontables/DataSource?docid=1xojtVquxKvt8j3vxhdDC4imeTp1yqd79Vu-HYo7D' target='blank'>point data</a> from <a href='http://greatby8.com' target='_blank'>GreatBy8</a>; View polygon data:  <a href='https://www.google.com/fusiontables/DataSource?docid=1WbIxDRp5EJ8H-o2ZoA3iJe-7MKPPNZT62ECfFbf_' target='blank'>children age 0-9</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=1lUY-LGZIBEVAdT82J6pKCsYj4Q6KNZQUpNG6QP6w' target='blank'>median household income</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=10GpaVFxTtIGP2WT9qEPJOJpxyWtrmLqA-hGOqKWx' target='blank'>adults with B.A. or above</a> from <a href='https://www.census.gov/acs/www' target='blank'>U.S. Census American Community Survey 5 year estimate 2008-12</a> <br>
+          <p>View <a href='https://www.google.com/fusiontables/DataSource?docid=1YVTd9gHRpxJqd-UZ3ULef7oqsQGgdJyNMlkFUvMa' target='blank'>point data</a> from <a href='http://commons.trincoll.edu/css' target='_blank'>The Cities, Suburbs, and Schools Project at Trinity</a>; View polygon data:  <a href='https://www.google.com/fusiontables/DataSource?docid=1pHSiILxVHirfmJdtW_KPCzkMQK9m8CLXAnC-Z7ek' target='blank'>racial minority percentages</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=1Ie1qRMx5YutKX3zfbtHwUo4-Cg617MVbKb-LpQ32' target='blank'>number of students</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=1bIC4f_uIF6H_TwoPKi_yEWSDSQVlvmgqX7DzLFVQ' target='blank'>percentage of students with disabilities</a> from <a href='https://data.ct.gov' target='blank'>Connecticut Open Data Portal</a> and  <a href='http://sdeportal.ct.gov/Cedar/WEB/ct_report/DTHome.aspx' target='blank'>Connecticut State Department of Education.</a><br>
           Tool by <a href='https://commons.trincoll.edu/dataviz/projects/#VeronicaArmendariz' target='blank'>Veronica Armendariz</a>, <a href='https://commons.trincoll.edu/dataviz' target='blank'>DataViz at Trinity College</a> based on <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Searchable Map Template</a> by <a href='http://derekeder.com' target='_blank'>Derek Eder</a>; open-source code available at <a href="http://jackdougherty.github.io/greatby8" target="_blank">GitHub</a></p>
         </div>
       </div>
