--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
             <!--MODIFY Point layer legend heading, labels (such as Interdistrict), and colors (green, blue, yellow, red, purple) to match your data -->
             <h4>
-              CAPT School Category
+              CMT School Category
             </h4>
             <ul class='inputs-list unstyled'>
               <li>
@@ -100,7 +100,6 @@
                   Focus
                 </label>
               </li>
-            </ul>
             </li>
               <li>
                 <label class='checkbox inline'>
@@ -123,7 +122,7 @@
               <li>
                 <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygon1' checked />
-                  Percent Minority
+                  Racial Minority
                 </label>
               </li>
               <li>
@@ -135,7 +134,7 @@
               <li>
                 <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygon3' />
-                  Percent Students with Disabilities
+                  Students with Disabilities
                 </label>
               </li>
               <li>
