--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Search for schools who administer the CMT test in Connecticut by typing in an address or zipcode.</p>
+          <p>Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode.</p>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
