--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <div class='row'>
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
-          <p>Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode.</p>
+          <p>This web tool allows viewers to access the geographic distribution of academic ratings in Connecticut and obtain a greater understanding of the strong relationship between these ratings and patterns of racial segregation and socioeconomic status of children and families. The tool also shows the geographic concentration of lower rated schools that will (continue to) experience arguably punitive educational reforms under the No Child Left Behind Act Waiver, as well as the greater level of autonomy of higher rated schools in Connecticut, which are dispersed throughout the rural and suburban areas. These specific reforms, such as Race to the Top and NCLB-like policies, have mixed records at best and substantial evidence that they reduce the quality of education for the most vulnerable children. Therefore, as Darling-Hammond suggests, this “educational redlining”- punitive educational reforms that primarily target low-income, racial/ethnic minority, and emerging bilingual children-could further undermine the schools that serve the highest need students in Connecticut. Read more about educational redlining <a href='http://www.thenation.com/article/165575/why-congress-redlining-our-schools' target='blank'>here</a>.<br>
+          <br>
+          Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode.</p>
           <div class='well'>
             <h4>
               Address <small>(<a id='find_me' href='#'>find me</a>)</small>
