--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
           <p>
-          Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode. <br>
-          If you want more information on educational redlining and background on the visualization, look below the map.
+          Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode. <br> 
+          
+          <br>If you want more information on educational redlining and background on the visualization, look below the map.
           </p>
           <div class='well'>
             <h4>
