--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--MODIFY link and text to point to your own site if desired-->
-            <li class='active'><a href="http://commons.trincoll.edu/css" target="_blank">Back to the Cities, Schools, and Suburbs Site</a></li>
+            <li class='active'><a href="http://commons.trincoll.edu/cssp" target="_blank">Back to the Cities, Schools, and Suburbs Site</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
