--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <!--MODIFY title that appears in web browser tab -->
-    <title>Connecticut Educational Redlining Map (CMT Version)</title>
+    <title>Unequal Schools: Disparities in Access to Small Kindergarten Classes</title>
     <meta charset='utf-8' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content='' name='description' />
@@ -25,12 +25,12 @@
             <span class="icon-bar"></span>
           </button>
           <!--MODIFY title of web page, and link destination if desired-->
-          <a class='navbar-brand' href='index.html'>Connecticut Educational Redlining Map (CMT Version)</a>
+          <a class='navbar-brand' href='index.html'>Unequal Schools: Disparities in Access to Small Kindergarten Classes</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--MODIFY link and text to point to your own site if desired-->
-            <li class='active'><a href="http://commons.trincoll.edu/cssp" target="_blank">Back to the Cities, Schools, and Suburbs Site</a></li>
+            <li class='active'><a href="http://www.ctvoices.org/" target="_blank">Back to Connecticut Voices for Children's Homepage</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -40,9 +40,9 @@
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
           <p>
-          Search for schools that administered the Connecticut Mastery Test by typing in an address or zipcode. <br> 
+          Use the checkboxes to filter schools by their kinderarten class size. Use the radio buttons to change the demographics displayed on the underlying map. <br> 
           
-          <br>If you want more information on educational redlining and background on the visualization, look below the map.
+          <br>If you want more information on the Unequal Schools project, and background on the visualization, look below the map.
           </p>
           <div class='well'>
             <h4>
@@ -66,55 +66,49 @@
             
             <!--MODIFY Point layer legend heading, labels (such as Interdistrict), and colors (green, blue, yellow, red, purple) to match your data -->
             <h4>
-              CMT School Category
+              Average Kindergarten Class Size
             </h4>
             <ul class='inputs-list unstyled'>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType1' />
                   <span class='filter-box filter-green'></span>
-                  Excelling  <!--This label can be modified from actual data entry ("Interdistrict") -->
+                  Under 16.2 Students  <!--This label can be modified from actual data entry ("Interdistrict") -->
                 </label>
               </li>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType2' />
                   <span class='filter-box filter-blue'></span>
-                  Progressing
+                  16.2 to 18.0 Students
                 </label>
               </li>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType3' />
                   <span class='filter-box filter-yellow'></span>
-                  Transitioning
+                  18.0 to 19.7 Students
                 </label>
               </li>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType4' />
                   <span class='filter-box filter-purple'></span>
-                  Review
+                  19.7 to 20.8 Students
                 </label>
               </li>
               <li>
                 <label class='checkbox inline'>
                   <input type='checkbox' id='cbType5' />
-                  <span class='filter-box filter-red'></span>
-                  Focus
+                  <img src='images/red-dot.png'></span>
+                  Over 20.8 Students
                 </label>
               </li>
             </li>
               <li>
-                <label class='checkbox inline'>
-                  <input type='checkbox' id='cbType6' />
-                  <img src='images/red-dot.png'></span>
-                  Turnaround
-                </label>
-              </li>
             </ul>
             <!--MODIFY Polygon layers legend heading, labels (such as Polygon layer 1) to match your data, and related variables in maps_lib.js file -->
-            <h4>School District layers</h4>
+            <h4>Connecticut Towns</h4>
             	<ul class='inputs-list unstyled'>
               	<ol id='polygon-legend'>
 			<li id='legend-left'></li>
@@ -132,13 +126,7 @@
               <li>
                 <label class='radio inline'>
                   <input type='radio' name='types' id='rbPolygon2' />
-                  Number of Students
-                </label>
-              </li>
-              <li>
-                <label class='radio inline'>
-                  <input type='radio' name='types' id='rbPolygon3' />
-                  Students with Disabilities
+                  Child Poverty
                 </label>
               </li>
               <li>
@@ -169,9 +157,10 @@
           </noscript>
           <div id='map_canvas'></div>
           <!--MODIFY link to publicly display your Google Fusion Tables data table, source, and text-->
-          <p><b><u>Background on Visualization:</u></b>This web tool allows viewers to access the geographic distribution of academic ratings in Connecticut and obtain a greater understanding of the strong relationship between these ratings and patterns of racial segregation and socioeconomic status of children and families. The tool also shows the geographic concentration of lower rated schools that will (continue to) experience arguably punitive educational reforms under the No Child Left Behind Act Waiver, as well as the greater level of autonomy of higher rated schools in Connecticut, which are dispersed throughout the rural and suburban areas. These specific reforms, such as Race to the Top and NCLB-like policies, have mixed records at best and substantial evidence that they reduce the quality of education for the most vulnerable children. Therefore, as Darling-Hammond suggests, this “educational redlining”- punitive educational reforms that primarily target low-income, racial/ethnic minority, and emerging bilingual children-could further undermine the schools that serve the highest need students in Connecticut. Read more about educational redlining <a href='http://www.thenation.com/article/165575/why-congress-redlining-our-schools' target='blank'>here</a>.<br>
-          <br>View <a href='https://www.google.com/fusiontables/DataSource?docid=1YVTd9gHRpxJqd-UZ3ULef7oqsQGgdJyNMlkFUvMa' target='blank'>point data</a> from <a href='http://commons.trincoll.edu/css' target='_blank'>The Cities, Suburbs, and Schools Project at Trinity</a>; View polygon data:  <a href='https://www.google.com/fusiontables/DataSource?docid=1pHSiILxVHirfmJdtW_KPCzkMQK9m8CLXAnC-Z7ek' target='blank'>racial minority percentages</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=1Ie1qRMx5YutKX3zfbtHwUo4-Cg617MVbKb-LpQ32' target='blank'>number of students</a>, <a href='https://www.google.com/fusiontables/DataSource?docid=1bIC4f_uIF6H_TwoPKi_yEWSDSQVlvmgqX7DzLFVQ' target='blank'>percentage of students with disabilities</a> from <a href='https://data.ct.gov' target='blank'>Connecticut Open Data Portal</a> and  <a href='http://sdeportal.ct.gov/Cedar/WEB/ct_report/DTHome.aspx' target='blank'>Connecticut State Department of Education.</a><br>
-          <br>Tool by <a href='https://commons.trincoll.edu/dataviz/projects/#VeronicaArmendariz' target='blank'>Veronica Armendariz</a>, <a href='https://commons.trincoll.edu/dataviz' target='blank'>DataViz at Trinity College</a> based on <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Searchable Map Template</a> by <a href='http://derekeder.com' target='_blank'>Derek Eder</a>; open-source code available at <a href="http://jackdougherty.github.io/greatby8" target="_blank">GitHub</a></p>
+          <p><b><u>Background on Unequal Schools:</u></b> The "Unequal Schools" project examines the impact of residential segregation on low-income and minority students' ability to access schools that offer valuable educational resources like small kindergarten classes and experienced teachers. Connecticut's towns are highly segregated by race and income. Our research shows that, in towns with few White residents and high rates of child poverty, public schools tend to have some of the largest kindergarten classes and least experienced teachers in the state. This gives families in these towns little access to these important educational resources. In fact, in schools with the largest kindergarten classes and/or the least experienced teachers, a majority of students are low-income and a majority are not White. Research shows that students who attend smaller classes in the early years, and who have more experienced teachers, tend to experience greater academic achievement gains. Unless Connecticut takes action to ensure that low-income and minority students have equal access to more well-resourced schools, our public schools will be actively widening the "academic opportunity gap between rich and poor students, and between White students and students of color. <br>
+          <br>This map offers a preview of our research, by allowing you to see where Connecticut public schools with the smallest and largest kindergarten classes are located. You can add and remove public schools with different levels of kindergarten class size on the left. You can also see Connecticut towns color-coded by their child poverty rates, or by the percent of residents who are not white. This allows you to explore see the impact of residential segregation on access to well-resourced schools. You can learn more from our <a href='' target='blank'>Unequal Schools Report THIS LINK IS EMPTY</a>.<br>
+          <br>Underlying school-level data can be found <a href='https://www.google.com/fusiontables/data?docid=1-k_kAl8w1yi4lZ4EMLA-eGCLGyNHuCoRMTui_McH#map:id=3' target='blank'>here</a>. Underlying town level data can be found  <a href='https://www.google.com/fusiontables/DataSource?docid=1aT8fZVTxW_kkW7jRpCw-S_VIy_KGzZDPIBgp-IHF#map:id=3' target='blank'>here</a>. Geospatial data are taken from the <a href='http://magic.lib.uconn.edu/' target='blank'>UConn Map and Geographic Information System (MAGIC)</a>. For a complete list of all data sources, pleas see our <a href='' target='blank'>report LINK IS EMPTY</a>. <br>
+          <br>This tool would not have been possible without the help of <a href='https://commons.trincoll.edu/dataviz/projects/#VeronicaArmendariz' target='blank'>Veronica Armendariz</a>, <a href='https://commons.trincoll.edu/dataviz' target='blank'>DataViz at Trinity College</a>, and the <a href='http://derekeder.com/searchable_map_template/' target='_blank'>Searchable Map Template</a> by <a href='http://derekeder.com' target='_blank'>Derek Eder</a>.
         </div>
       </div>
     </div>
