Fixes spelling of kindergarten.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class='col-md-4'>
         <!--MODIFY or erase any descriptive text or links below between the paragraph <p> tags -->
           <p>
-          Use the checkboxes to filter schools by their kinderarten class size. Use the radio buttons to change the demographics displayed on the underlying map. <br> 
+          Use the checkboxes to filter schools by their kindergarten class size. Use the radio buttons to change the demographics displayed on the underlying map. <br> 
           
           <br>If you want more information on the Unequal Schools project, and background on the visualization, look below the map.
           </p>
