--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--MODIFY link and text to point to your own site if desired-->
-            <li class='active'><a href="http://ctvoices.github.io/unequal-schools-teaching-experience" target="_blank">/View Map of Teaching Experience</a></li>
+            <li class='active'><a href="http://ctvoices.github.io/unequal-schools-teaching-experience" target="_blank">View Map of Teaching Experience</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
